...
            }
          }}
        />
        <Tabs.Screen
          name="transactions"
          options={{
            title: 'Extrato',
            tabBarButton: ({ onPress, accessibilityState }) => {
              const focused = accessibilityState?.selected;
              return (
                <Pressable
                  onPress={onPress}
                  style={{
...
          }}
        />

        <Tabs.Screen
          name="goals"
          options={{
            title: 'Metas',
            tabBarButton: ({ onPress, accessibilityState }) => {
              const focused = accessibilityState?.selected;
              return (
                <Pressable
                  onPress={onPress}
                  style={{
...
